--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+.xdebug-error {
+    color: black;
+}
+
+
 :root {
     --background: #1E212B;
     --yellow: #FFAE00;
@@ -302,7 +307,6 @@ footer a {
 /* Page about us vueAboutUs.php */
 
 
-
 .aPerson {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -481,6 +485,7 @@ footer a {
     padding: 20px 60px;
     color: white;
     font-size: 20px;
+    margin: 20px 0 0 0;
 }
 
 .giftCardsForm {
@@ -958,14 +963,14 @@ footer a {
     background-color: var(--green);
 }
 
-select.greenButtonEscapeGames{
+select.greenButtonEscapeGames {
     font-size: 16px;
     text-align: center;
     padding: 20px 0;
 }
 
-select.greenButtonEscapeGames>option{
-    padding: 10px ;
+select.greenButtonEscapeGames > option {
+    padding: 10px;
 }
 
 .addTitle {
@@ -1029,7 +1034,7 @@ select.greenButtonEscapeGames>option{
     background-color: var(--green);
 }
 
-.buttonsQandA > .redButtonQandA, .buttonsQandA>.redButtonQandA, .redButtonQandA {
+.buttonsQandA > .redButtonQandA, .buttonsQandA > .redButtonQandA, .redButtonQandA {
     background-color: var(--red);
     color: white;
     border: none;
@@ -1063,7 +1068,7 @@ textarea.addTitle {
     margin: 12% 0%;
 }
 
-.oneQandA{
+.oneQandA {
     margin: 16% 0%;
 }
 
@@ -1148,14 +1153,14 @@ textarea.addTitle {
     font-size: 20px;
 }
 
-.deuxTiers{
+.deuxTiers {
     min-height: 66vh;
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
 }
 
-.greenBar{
+.greenBar {
     border: var(--green) solid 2px;
     margin-block-start: 2em;
     margin-block-end: 1em;
@@ -1500,3 +1505,22 @@ textarea.addTitle {
     padding: 0px 20px;
 
 }
+
+/* Page achat carte vueBuyCards.php */
+
+.errorForm {
+    border: solid 3px var(--red) !important;
+}
+
+.okForm {
+    border: solid 3px var(--green) !important;
+}
+
+.errorMessageBuy {
+    color: var(--red);
+    font-size: 20px;
+    margin: 10px 0 0 0;
+    text-align: center;
+}
+
+/* Page de vente réussite */
