--- a/styles/stylePC.css
+++ b/styles/stylePC.css
@@ -1,18 +1,3 @@
-:root {
-    --background: #1E212B;
-    --yellow: #FFAE00;
-    --green: #038C4C;
-    --black: #101010;
-    --lightBlue: #373D50;
-    --red: #fb4d3d;
-    --lightGrey: #a4a4a4
-    --veryLightBlue: #6A7497;
-    --grey: #D9D9D9;
-}
-
-
-
-
 /* Page header gabarit.php */
 header {
     grid-template-columns: auto 1fr;
@@ -69,7 +54,7 @@ header img {
     margin-right: 20px;
 }
 
-.PCMenuDiv{
+.PCMenuDiv {
     margin-left: 10px;
     display: flex;
     flex-direction: column;
@@ -78,9 +63,10 @@ header img {
     color: white;
 }
 
-.none{
+.none {
     display: none;
 }
+
 /* Footer */
 
 .tel {
@@ -138,10 +124,20 @@ header img {
 }
 
 
-.div1 { grid-area: 1 / 1 / 2 / 2; }
-.div2 { grid-area: 2 / 1 / 4 / 3; }
-.div3 { grid-area: 2 / 4 / 6 / 6; }
-.div4 { grid-area: 3 / 1 / 5 / 3;
+.div1 {
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.div2 {
+    grid-area: 2 / 1 / 4 / 3;
+}
+
+.div3 {
+    grid-area: 2 / 4 / 6 / 6;
+}
+
+.div4 {
+    grid-area: 3 / 1 / 5 / 3;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -152,6 +148,7 @@ header img {
     height: max-content;
     font-size: 16pt;
 }
+
 .div6 {
     grid-area: 2 / 2 / 2 / 2;
     height: max-content;
@@ -159,96 +156,97 @@ header img {
 }
 
 
-.underline>p{
+.underline > p {
     font-size: 16pt;
 }
 
 
-.divImg{
+.divImg {
     width: 500px;
     height: 400px;
 }
 
-.GC{
+.GC {
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-size: 19pt;
 }
 
-.GC>div>div>a{
+.GC > div > div > a {
     font-size: 21pt;
 }
 
-.titleAndImage>img{
+.titleAndImage > img {
     clip-path: polygon(20% 1%, 70% 0, 70% 100%, 20% 100%);
 }
 
-.Vue{
+.Vue {
     display: none;
 }
 
-.Vue2{
+.Vue2 {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.Posi{
+.Posi {
     position: relative;
     width: 200px;
     height: 350px;
     transition: 0.2s;
 }
 
-.Posi:hover{
+.Posi:hover {
     border: 3px solid var(--yellow);
 }
 
-.Posi>h2{
+.Posi > h2 {
     position: relative;
     bottom: 20%;
     left: 8%;
     z-index: 3;
 }
 
-.Posi>div{
+.Posi > div {
     z-index: 3;
-    background-image: linear-gradient(90deg, black,rgba(0, 0, 0, 0));
+    background-image: linear-gradient(90deg, black, rgba(0, 0, 0, 0));
 }
 
-.Posi>div>.img1{
-   height: 300px;
-   width: auto;
-   position: relative;
-   right: 70px;
-   clip-path: polygon(14% 0, 54% 0, 54% 100%, 14% 100%);
+.Posi > div > .img1 {
+    height: 300px;
+    width: auto;
+    position: relative;
+    right: 70px;
+    clip-path: polygon(14% 0, 54% 0, 54% 100%, 14% 100%);
 }
 
-.Posi>div>.img2{
+.Posi > div > .img2 {
     height: 300px;
     width: auto;
     position: relative;
     right: 120px;
     clip-path: polygon(24% 0, 64% 0, 64% 100%, 24% 100%);
- }
+}
 
- .Posi>div>.img3{
+.Posi > div > .img3 {
     height: 300px;
     width: auto;
     position: relative;
     right: 159px;
     clip-path: polygon(32% 0, 72% 0, 72% 100%, 32% 100%);
- }
+}
 
- .Posi>div>.img4{
+.Posi > div > .img4 {
     height: 300px;
     /* width: auto; */
     /* position: relative; */
     /* right: 151px;
     clip-path: polygon(30% 0, 70% 0, 70% 100%, 30% 100%); */
- }
-.Posi>a{
+}
+
+.Posi > a {
     font-size: 20pt;
     margin: 10px 30px;
     color: var(--yellow);
@@ -256,24 +254,24 @@ header img {
     top: -60px;
 }
 
-.Posi>a:visited{
+.Posi > a:visited {
     color: var(--yellow);
 }
 
-.reviewsHome{
+.reviewsHome {
     display: flex;
     justify-content: space-around;
 }
 
 /* About Us PC */
 
-.Flexy{
+.Flexy {
     display: flex;
     justify-content: space-around;
-  
+
 }
 
-.persons{
+.persons {
     position: relative;
     display: grid;
 
@@ -283,18 +281,29 @@ header img {
     grid-row-gap: 1px;
 }
 
-.div7 { grid-area: 1 / 1 / 2 / 2; }
-.div8 { grid-area: 1 / 2 / 2 / 3; }
-.div9 { grid-area: 2 / 2 / 3 / 3; }
-.div10 { grid-area: 2 / 1 / 3 / 2; }
+.div7 {
+    grid-area: 1 / 1 / 2 / 2;
+}
 
-.aPerson{
+.div8 {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.div9 {
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.div10 {
+    grid-area: 2 / 1 / 3 / 2;
+}
+
+.aPerson {
     border: 0px solid green;
-    
+
     padding-bottom: 0%;
 }
 
-.green{
+.green {
     position: absolute;
     right: 50%;
     top: 0px;
@@ -304,35 +313,36 @@ header img {
     padding: 1px;
 }
 
-.contactForm{
+.contactForm {
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
-.nop{
+.nop {
     grid-column: 1/3;
 }
 
-.right{
+.right {
     grid-column: 1/3;
 }
 
-.contactInfos{
+.contactInfos {
     position: absolute;
     bottom: 0px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
+
 /* Page legal notice vueLegalNotice.php */
 
 .legalNoticeContent h3 {
     font-size: 32px;
 }
 
-/* Admin Acceuil */
+/* Admin Accueil */
 
-.adminButtons{
+.adminButtons {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -341,14 +351,14 @@ header img {
 
 /* Admin Escape Games */
 
-.allEscapeGamesAdmin{
+.allEscapeGamesAdmin {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     column-gap: 20px;
 }
 
-.anEscapeGameAdmin{
+.anEscapeGameAdmin {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -356,3 +366,11 @@ header img {
 
 /* Menu Admin */
 
+/* Page admin vueAdminContactForm.php */
+
+.messageOpen {
+    top: 40%;
+    left: 20%;
+    width: 60%;
+    height: 20%;
+}
