Mise en place de la version PC sur plusieurs pages admin : - vueAdminGiftCards.php - vueAdminJobs.php - vueAdminJob.php

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,15 +26,26 @@
     display: none;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     margin: 0;
     background-color: var(--background);
     font-family: 'Roboto', sans-serif;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 100%;
 }
 
 img {
     width: 100%;
     height: auto;
+}
+
+.input[type="submit"] {
+    cursor: pointer;
 }
 
 /* Header gabarit.php */
@@ -1464,7 +1475,7 @@ textarea.addTitle {
 .noDeleteUser {
     background-color: var(--green);
     padding: 10px 30px;
-    color: black;
+    color: white;
     cursor: pointer;
     border: none;
 }
