--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,10 @@ img {
     height: auto;
 }
 
+input[type="submit"]{
+    cursor: pointer;
+}
+
 /* Header gabarit.php */
 
 header {
@@ -1000,7 +1004,7 @@ footer a {
     font-size: 20px;
 }
 
-/* Page admin vueAdminQAndA.php */
+/* Page admin vueAdminQAndA.php et liées */
 
 .greenButtonEscapeGames {
     border: none;
@@ -1207,7 +1211,16 @@ textarea.addTitle {
 .greenBar {
     border: var(--green) solid 2px;
     margin-block-start: 2em;
+    margin-block-end: 0.5em;
+}
+
+h3.titleAdminQAndA{
+    font-size: 20px;
+    display: block;
+    margin-block-start: 1em;
     margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 /* Page Admin vueAdminJobs */
