--- a/styles/stylePC.css
+++ b/styles/stylePC.css
@@ -67,8 +67,39 @@ header img {
     display: none;
 }
 
-/* Footer */
+.loginLinksPC {
+    position: relative;
+}
 
+.loginLinksPC:hover + .hoverLoginPC {
+    top: 9%;
+}
+
+.hoverLoginPC:hover {
+    top: 9%;
+}
+
+.hoverLoginPC {
+    display: flex;
+    position: absolute;
+    top: -15%;
+    right: 2%;
+    background-color: var(--lightBlue);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    transition: .2s;
+}
+
+.hoverLoginPC > a {
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    padding: 10px;
+}
+
+/* Footer */
 .tel {
     display: none;
 }
@@ -377,87 +408,87 @@ header img {
 
 /* Page admin vueAdminQAndA.php et liées */
 
-.oneCategory{
+.oneCategory {
     display: grid;
     grid-template-columns: 40% 60%;
 }
 
-.buttonsQandA{
+.buttonsQandA {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     align-items: center;
 }
 
-h3.adminQandA{
+h3.adminQandA {
     font-size: 32px;
     display: flex;
     gap: 8px;
 }
 
-.buttonsQandA > a, .buttonsQandA > select{
+.buttonsQandA > a, .buttonsQandA > select {
     font-size: 18px;
 }
 
-.titleAdminQAndA{
+.titleAdminQAndA {
     font-size: 24px;
 }
 
-.formAdmin > input[type=submit]{
+.formAdmin > input[type=submit] {
     /* margin: 0% 40%; */
     margin: 0% 0% 0% 80%;
     margin-top: 30px;
 }
 
-.formAdmin > label > input[type=text], .formAdmin > label > textarea{
+.formAdmin > label > input[type=text], .formAdmin > label > textarea {
     font-size: 18px;
 }
 
-a > button.returnAdmin{
+a > button.returnAdmin {
     padding: 1% 2%;
 }
 
-.greenBar{
-    margin-block-end:0;
+.greenBar {
+    margin-block-end: 0;
 }
 
-.listQandA{
+.listQandA {
     margin: 6% 0;
 }
 
-.oneQandA{
+.oneQandA {
     margin: 4% 0%;
 }
 
-.oneQ, .oneA{
+.oneQ, .oneA {
     display: grid;
     grid-template-columns: 30% 70%;
 }
 
-.titleA, .titleQ{
+.titleA, .titleQ {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.oneQandA > div > p{
+.oneQandA > div > p {
     margin: 2%;
 }
 
-.buttonsQandAQuestions{
+.buttonsQandAQuestions {
     margin: 2% 0%;
     margin-left: 60%;
     grid-template-columns: 1fr 1fr;
 }
 
-h3.titleAdminQAndA{
+h3.titleAdminQAndA {
     font-size: 24px;
 }
 
-.formAdmin > input[type=submit].redButtonQandA{
+.formAdmin > input[type=submit].redButtonQandA {
     margin: 0% 40%;
     margin-top: 30px;
 }
 
-label.center>h3{
+label.center > h3 {
     justify-content: center;
 }
 
