- Ajout d'un système de "Remember Me" dans le login, avec la génération d'un token aléatoire pour chaque utilisateur à sa création. - Ajout de la vérification que le code d'une gift card n'existe pas déjà dans la DB avant d'ajouter la nouvelle carte dans la DB - Modification du style du formulaire de login pour être adapté au PC - Modification du fonctionnement des erreurs lors de la création d'un compte pour pouvoir en afficher plusieurs - Mise en place de verification pour la qualité du mot de passe via une expression régulière - Mise en place d'un message indiquant qu'aucun achat n'a été effectué sur les comptes sans achat dans le panneau de paramètre d'un compte

--- a/styles/stylePC.css
+++ b/styles/stylePC.css
@@ -365,6 +365,19 @@ header img {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+/* Page de connexion vueLogin.php */
+
+.signInForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.signInForm input[type="password"], .signInForm input[type="email"] {
+    width: 300px;
+}
+
 /* Page legal notice vueLegalNotice.php */
 
 .legalNoticeContent h3 {
