Menu admin apparait plus sur PC quand pas sur l'admin

--- a/styles/style.css
+++ b/styles/style.css
@@ -81,6 +81,10 @@ main {
     left: 0 !important;
 }
 
+.none {
+    display: none;
+}
+
 .mobileMenu, .mobileMenuAdmin {
     position: fixed;
     top: 0;
