--- a/styles/stylePC.css
+++ b/styles/stylePC.css
@@ -71,27 +71,29 @@ header img {
     position: relative;
 }
 
-.loginLinksPC:hover + .hoverLoginPC {
-    top: 9%;
-}
 
-.hoverLoginPC:hover {
-    top: 9%;
-}
+
 
 .hoverLoginPC {
     display: flex;
     position: absolute;
-    top: -15%;
+    top: 0%;
     right: 2%;
     background-color: var(--lightBlue);
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 20px;
-    transition: .2s;
+    transition: 0.8s;
+    transform: translateY(-100%);
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 }
 
+
+.open{
+    transform: translateY(0);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
 .hoverLoginPC > a {
     text-decoration: none;
     color: white;
