Mise en place de la DB en PHP sur vueAccueil.php ainsi que la modification de certaine partie du style

--- a/styles/style.css
+++ b/styles/style.css
@@ -276,18 +276,15 @@ footer a {
     font-size: 24px;
 }
 
-.titleAndImage img {
-    width: 45%;
-    margin-right: 5%;
-}
-
 .contourTitleImage {
     border-bottom: var(--green) 3px solid;
 }
 
 .titleAndImage {
-    display: flex;
-    margin-top: 5%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    margin: 5% 0 5% 0
 }
 
 .reviewsHome {
@@ -301,6 +298,8 @@ footer a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 10px;
+    padding: 20px;
+    color: black;
 }
 
 .leftReview {
@@ -321,6 +320,13 @@ footer a {
 .Vue2 {
     display: none;
 
+}
+
+.yellowLinkHomeEscapeMobile {
+    background-color: var(--yellow);
+    color: black;
+    text-decoration: none;
+    padding: 10px;
 }
 
 /* Page account vueAccount.php */
@@ -619,7 +625,7 @@ footer a {
 
 /* Page Partners vuePartners.php */
 
-.partners{
+.partners {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(6, 1fr);
@@ -1293,7 +1299,7 @@ h3.titleAdminQAndA {
 
 .topJob {
     border: var(--yellow) 3px solid;
-    margin-bottom: 20px;
+    argin-bottom: 20px;
 }
 
 .titleJob {
