Légères modifs de la page des jobs pour quelle s'affiche bien sur PC. Mise en place des formulaires de contact sur les pages vueJobs.php et vuePartners.php.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1299,7 +1299,7 @@ h3.titleAdminQAndA {
 
 .topJob {
     border: var(--yellow) 3px solid;
-    argin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .titleJob {
@@ -1309,6 +1309,7 @@ h3.titleAdminQAndA {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     padding: 20px;
     font-size: 19pt;
 }
