Modif de l'alignement des icons sur la page vueGiftCards.php

--- a/styles/stylePC.css
+++ b/styles/stylePC.css
@@ -293,7 +293,20 @@ header img {
     justify-content: space-around;
 }
 
-/* Jobs */
+/* Page Gift Cards */
+
+.flexCardsPC {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    align-items: baseline;
+}
+
+.ligneOneGiftCards {
+    grid-gap: 50px;
+}
+
+/* Page Jobs */
 
 .jobsFirstIcons {
     display: grid;
