--- a/styles/style.css
+++ b/styles/style.css
@@ -428,6 +428,8 @@ footer a {
     color: white;
 }
 
+
+
 #map {
     height: 250px;
 }
@@ -567,11 +569,9 @@ footer a {
     align-items: center;
 }
 
-.doubleLigneJobs {
+.jobsFirstIcons {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
-    align-items: center;
 }
 
 .singleLigneJobs {
@@ -613,9 +613,6 @@ footer a {
 
 }
 
-.contactJobs {
-    margin-top: 20px;
-}
 
 /* Page Partners vuePartners.php */
 
