début de la réparation des escapes sur la home page et limites des avis sur la home page

--- a/styles/stylePC.css
+++ b/styles/stylePC.css
@@ -218,8 +218,9 @@ header img {
 }
 
 .Vue2 {
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
     align-items: center;
 }
 
