Update Admin EG
Début de la gestion des images

--- a/styles/style.css
+++ b/styles/style.css
@@ -943,6 +943,13 @@ footer a {
     background-color: var(--lightBlue);
 }
 
+.formAdminEG>.imgAdminEG{
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 4%;
+    margin-bottom: 16%;
+}
+
 .difficultyAdmin{
     display: grid;
     grid-template-columns: 1fr 1fr;
