--- a/styles/stylePC.css
+++ b/styles/stylePC.css
@@ -222,13 +222,16 @@ header img {
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     align-items: center;
+    gap: 8%;
+    /* margin-bottom: 12%; */
 }
 
 .Posi {
     position: relative;
-    width: 200px;
-    height: 350px;
-    transition: 0.2s;
+    border: 3px solid var(--background);
+    /* width: 200px;
+    height: 350px; */
+    /* transition: 0.2s; */
 }
 
 .Posi:hover {
@@ -236,12 +239,16 @@ header img {
 }
 
 .Posi > h2 {
-    position: relative;
-    bottom: 25%;
+    /* position: relative; */
+    position: absolute;
+    /* bottom: 12%; */
+    top: 75%;
     z-index: 3;
     display: flex;
     justify-content: center;
     text-align: center;
+    width: 100%;
+    color: white;
 }
 
 .Posi > div {
