--- a/styles/stylePC.css
+++ b/styles/stylePC.css
@@ -75,8 +75,8 @@ header img {
 .hoverLoginPC {
     display: flex;
     position: absolute;
-    top: 0%;
-    right: 2%;
+    top: 10%;
+    right: 0%;
     background-color: var(--lightBlue);
     flex-direction: column;
     justify-content: center;
@@ -124,7 +124,7 @@ header img {
     gap: 20px;
 }
 
-.ligneFooter>div{
+.ligneFooter > div {
     margin: 10px;
 }
 
@@ -306,7 +306,7 @@ header img {
     justify-content: space-around;
 }
 
-.aReview>.rightReview{
+.aReview > .rightReview {
     text-align: center;
     align-items: center;
 }
@@ -325,7 +325,6 @@ header img {
     justify-content: space-around;
     grid-gap: 50px;
 }
-
 
 
 /* Page Jobs */
@@ -400,7 +399,7 @@ header img {
     grid-template-columns: 1fr 1fr;
 }
 
-.column2{
+.column2 {
     grid-column: 2;
 }
 
@@ -449,6 +448,12 @@ header img {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     column-gap: 20px;
+}
+
+/* Admin Escape Game */
+
+.visibilityEG {
+    font-size: 22px;
 }
 
 /* Admin Escape Games */
@@ -711,33 +716,43 @@ label.center > h3 {
     grid-template-columns: 1fr 1fr;
 }
 
+/* Page Escape Game*/
+
+.escapeGSliderIMG {
+    height: 50vh;
+}
+
+#mapEscapeGame {
+    height: 40vh;
+}
+
 
 /* Page Escape Gamessssssssss */
 
-.escapeGamesAlign{
+.escapeGamesAlign {
     display: grid !important;
     grid-template-columns: repeat(2, 1fr) !important;
     grid-template-rows: 50px 1fr 200px !important;
     grid-column-gap: 30px;
 }
 
-.escapeGamesAlign>.titreEscape{
+.escapeGamesAlign > .titreEscape {
     grid-area: 1 / 2 / 2 / 3 !important;
- 
+
     height: max-content;
 }
 
-.imgEscape{
+.imgEscape {
     grid-area: 1 / 1 / 4 / 2 !important;
     display: flex;
     align-items: center;
 }
 
-.paraEscape{
+.paraEscape {
     grid-area: 2 / 2 / 3 / 3 !important;
 }
 
-.buttonEscape{
+.buttonEscape {
     grid-area: 3 / 2 / 4 / 3 !important;
     width: max-content;
     height: max-content;
@@ -750,30 +765,30 @@ label.center > h3 {
     grid-template-columns: repeat(2, 1fr) !important;
     grid-template-rows: 50px 1fr 200px !important;
     grid-column-gap: 30px;
-  }
-  
-  .escapeGamesReverse > .titreEscape {
+}
+
+.escapeGamesReverse > .titreEscape {
     grid-area: 1 / 1 / 2 / 2 !important;
 
-  }
-  
-  .escapeGamesReverse > .imgEscape {
+}
+
+.escapeGamesReverse > .imgEscape {
     grid-area: 1 / 2 / 4 / 3 !important;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-  }
-  
-  .escapeGamesReverse > .paraEscape {
+}
+
+.escapeGamesReverse > .paraEscape {
     grid-area: 2 / 1 / 3 / 2 !important;
-  
-  }
-  
-  .escapeGamesReverse > .buttonEscape {
+
+}
+
+.escapeGamesReverse > .buttonEscape {
     grid-area: 3 / 1 / 4 / 2 !important;
     width: max-content;
     height: max-content;
     margin-right: 170px;
 
-  }
+}
   
